# skymonitor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  app.py  export-exchange-incidents.ps1  pyproject.toml  requirements.txt
.codex/skills/documenta/: SKILL.md
.codex/skills/feature/: SKILL.md
.codex/skills/git-flow/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/features/01-correcao-de-yaml-no-skill-documenta/: spec.md
docs/features/02-governanca-de-desenvolvimento-python-com-tdd-e-ambiente-virtual/: spec.md
docs/features/03-scripts-de-ambiente-virtual-e-testes/: spec.md
docs/features/04-cobertura-tdd-da-regra-de-negocio-do-cli/: spec.md
docs/features/04-menu-interativo-de-incidentes-skyhighmonitor/: spec.md
docs/features/05-cobertura-tdd-da-regra-de-negocio-do-cli/: spec.md
docs/features/06-exportacao-csv-de-incidentes-exchange-1-dia/: spec.md
docs/features/07-script-powershell-para-exportacao-csv-da-opcao-3/: spec.md
docs/referencias/skyhigh/: 01-visao-geral.md  02-autenticacao-com-basic-auth.md  03-autenticacao-com-access-token-iam.md  04-consulta-de-incidentes.md  05-resposta-da-api-e-campos.md  06-troubleshooting-e-boas-praticas.md  index.md
env-script/: lint.sh  start.sh  stop.sh  test.sh  typecheck.sh
scripts/: validate_repo.sh
skills/git-flow/: SKILL.md
skills/git-flow/agents/: openai.yaml
skymonitor/: __init__.py  api.py  cli.py  config.py  types.py
tests/: test_app_business_rules.py  test_app_menu.py  test_config.py  test_env_scripts.py  test_project_governance.py
(+8 files in other folders)
