[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skymonitor"
version = "0.1.0"
description = "CLI Python para autenticacao e consulta de incidentes Skyhigh"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = ["skymonitor/config.py", "skymonitor/types.py", "skymonitor/api.py", "skymonitor/cli.py"]
strict = true
